--- a/ANN_classify_Qwerties.ipynb
+++ b/ANN_classify_Qwerties.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e175a90",
+   "id": "da20e4c5",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ebc3cdf",
+   "id": "e8d86900",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f798c1c1",
+   "id": "cc2690dc",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "78e7638d",
+   "id": "cea002ce",
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,172 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "83765d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m learningRate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m.01\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# loss function\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m lossfun \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mBCELoss()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Note: You'll learn in the \"Metaparameters\" section that it's better to use BCEWithLogitsLoss, but this is OK for now.\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# optimizer\u001b[39;00m\n\u001b[0;32m     10\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mSGD(ANNclassify\u001b[38;5;241m.\u001b[39mparameters(),lr\u001b[38;5;241m=\u001b[39mlearningRate)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# other model features\n",
+    "\n",
+    "learningRate = .01\n",
+    "\n",
+    "# loss function\n",
+    "lossfun = nn.BCELoss()\n",
+    "# Note: You'll learn in the \"Metaparameters\" section that it's better to use BCEWithLogitsLoss, but this is OK for now.\n",
+    "\n",
+    "# optimizer\n",
+    "optimizer = torch.optim.SGD(ANNclassify.parameters(),lr=learningRate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d258d2e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# train the model\u001b[39;00m\n\u001b[0;32m      2\u001b[0m numepochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m\n\u001b[1;32m----> 3\u001b[0m losses \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mzeros(numepochs)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epochi \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(numepochs):\n\u001b[0;32m      6\u001b[0m \n\u001b[0;32m      7\u001b[0m   \u001b[38;5;66;03m# forward pass\u001b[39;00m\n\u001b[0;32m      8\u001b[0m   yHat \u001b[38;5;241m=\u001b[39m ANNclassify(data)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# train the model\n",
+    "numepochs = 1000\n",
+    "losses = torch.zeros(numepochs)\n",
+    "\n",
+    "for epochi in range(numepochs):\n",
+    "\n",
+    "  # forward pass\n",
+    "  yHat = ANNclassify(data)\n",
+    "\n",
+    "  # compute loss\n",
+    "  loss = lossfun(yHat,labels)\n",
+    "  losses[epochi] = loss\n",
+    "\n",
+    "  # backprop\n",
+    "  optimizer.zero_grad()\n",
+    "  loss.backward()\n",
+    "  optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7b7e3e5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# show the losses\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(losses\u001b[38;5;241m.\u001b[39mdetach(),\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m,markerfacecolor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m,linewidth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m.1\u001b[39m)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEpoch\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLoss\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# show the losses\n",
+    "\n",
+    "plt.plot(losses.detach(),'o',markerfacecolor='w',linewidth=.1)\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.show()\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8b02cd12",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ANNclassify' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# compute the predictions\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# manually compute losses\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# final forward pass\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m predictions \u001b[38;5;241m=\u001b[39m ANNclassify(data)\n\u001b[0;32m      7\u001b[0m predlabels \u001b[38;5;241m=\u001b[39m predictions\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m.5\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# find errors\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ANNclassify' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# compute the predictions\n",
+    "\n",
+    "# manually compute losses\n",
+    "# final forward pass\n",
+    "predictions = ANNclassify(data)\n",
+    "\n",
+    "predlabels = predictions>.5\n",
+    "\n",
+    "# find errors\n",
+    "misclassified = np.where(predlabels != labels)[0]\n",
+    "\n",
+    "# total accuracy\n",
+    "totalacc = 100-100*len(misclassified)/(2*nPerClust)\n",
+    "\n",
+    "print('Final accuracy: %g%%' %totalacc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "09a44299",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# plot the labeled data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m fig \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m5\u001b[39m))\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(data[misclassified,\u001b[38;5;241m0\u001b[39m] ,data[misclassified,\u001b[38;5;241m1\u001b[39m],\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrx\u001b[39m\u001b[38;5;124m'\u001b[39m,markersize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m,markeredgewidth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(data[np\u001b[38;5;241m.\u001b[39mwhere(\u001b[38;5;241m~\u001b[39mpredlabels)[\u001b[38;5;241m0\u001b[39m],\u001b[38;5;241m0\u001b[39m],data[np\u001b[38;5;241m.\u001b[39mwhere(\u001b[38;5;241m~\u001b[39mpredlabels)[\u001b[38;5;241m0\u001b[39m],\u001b[38;5;241m1\u001b[39m],\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbs\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# plot the labeled data\n",
+    "fig = plt.figure(figsize=(5,5))\n",
+    "plt.plot(data[misclassified,0] ,data[misclassified,1],'rx',markersize=12,markeredgewidth=3)\n",
+    "plt.plot(data[np.where(~predlabels)[0],0],data[np.where(~predlabels)[0],1],'bs')\n",
+    "plt.plot(data[np.where(predlabels)[0],0] ,data[np.where(predlabels)[0],1] ,'ko')\n",
+    "\n",
+    "plt.legend(['Misclassified','blue','black'],bbox_to_anchor=(1,1))\n",
+    "plt.title(f'{totalacc}% correct')\n",
+    "plt.show()\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5050a860",
+   "id": "828fcd1c",
    "metadata": {},
    "outputs": [],
    "source": []
